# is-moderator-bot

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
bot/: main.py  utils.py
bot/alembic/: env.py
bot/alembic/versions/: 13f1e59fd4a1_add_str_telegram_id_field.py  db690c951ea4_init_db.py
bot/database/: __init__.py  cruds.py  models.py
bot/settings/: __init__.py
