[project]
name = "is-moderator-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "ilyashirko",email = "ilyashirko@gmail.com"}
]
license = {text = "CC BY-NC 4.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.5,<23.0)",
    "environs (>=14.5.0,<15.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
